<resources>
    <string name="app_name" translatable="false">DOANMESS</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment" translatable="false">Hello blank fragment</string>
    <string name="default_notification_channel_id" translatable="false">TIN_NHAN_MOI</string>
    <string name="Add_Friend">Add Friend</string>
    <string name="Search">Search</string>
    <string name="BlockList">Block List</string>
    <string name="CreateGroup">Create Group</string>
    <string name="Nameyourgroup">Name your group</string>
    <string name="Cancel">Cancel</string>
    <string name="Create">Create</string>
    <string name="Forgot">Forgot</string>
    <string name="Password">Password?</string>
    <string name="ResetPassword">Reset Password</string>
    <string name="FriendsList">Friends List</string>
    <string name="FriendRequests">Friend Requests</string>
    <string name="Hello">Hello,</string>
    <string name="AllChat">All Chat</string>
    <string name="Contact">Contact</string>
    <string name="Info">Info</string>
    <string name="AnotherOption">Another Option</string>
    <string name="Noticeoption">Notice option</string>
    <string name="Viewpinnedmessage">View pinned message</string>
    <string name="Limit">Limit</string>
    <string name="Block">Block</string>
    <string name="Deletemessage">Delete message</string>
    <string name="WELCOMEBACK">WELCOME BACK</string>
    <string name="Login">Login</string>
    <string name="Pleasesignintocontinue">Please sign in to continue</string>
    <string name="Donthaveanaccount">Don\'t have an account?</string>
    <string name="Signup">Sign up</string>
    <string name="UploadPost">Upload Post</string>
    <string name="AddPost">Add Post</string>
    <string name="Entertitle">Enter title</string>
    <string name="ChooseImageVideo">Choose Image/Video</string>
    <string name="CreateAccount">Create Account</string>
    <string name="FULLNAME">FULL NAME</string>
    <string name="UserName">User Name</string>
    <string name="PASSWORD">PASSWORD</string>
    <string name="CONFIRMPASSWORD">CONFIRM PASSWORD</string>
    <string name="Alreadyhaveanaccount">Already have an account?</string>
    <string name="Signin">Sign in</string>
    <string name="Allusermustverifytheiremailtologin">All user must verify their email to login</string>
    <string name="AverificationemailhasbeensenttoyouremailaddressPleaseverifyyouremail">A verification email has been sent to your email address. Please verify your email.</string>
    <string name="GotoLogin">Go to Login</string>
    <string name="YourTextHere">Your Text Here</string>
    <string name="Add">Add</string>
    <string name="Added">Added</string>
    <string name="DarkMode">Dark Mode</string>
    <string name="Changeavatar">Change avatar</string>
    <string name="Changename">Change name</string>
    <string name="Friendrequest">Friend request</string>
    <string name="Friendlist">Friend list</string>
    <string name="Blocklist">Block list</string>
    <string name="Logout">Logout</string>
    <string name="Name">Name</string>
    <string name="Sentmessage">Sent message</string>
    <string name="Time">Time</string>
    <string name="Seemore">See more</string>
    <string name="Online">Online</string>
    <string name="Hellodif">Hello</string>
    <string name="PrivicySupport">Privicy - Support</string>
    <string name="DeleteMessage">Delete Message</string>
    <string name="AreYouSureYouWantToDeleteThisMessage">Are you sure you want to delete this message?</string>
    <string name="CancelDelete">Cancel</string>
    <string name="Delete">Delete</string>
    <string name="You">You</string>
    <string name="ChangeLanguage">Change Language</string>
    <string name="PinnedMessages">Pinned Messages</string>
    <string name="Language">Language</string>
    <string name="Audio">Sent an audio</string>
    <string name="Image">Sent an image</string>
    <string name="Video">Sent a video</string>
    <string name="Location">Sent a location</string>
    <string name="File">Sent a file</string>
    <string name="option">Option</string>
    <string name="pin">Pin</string>
    <string name="unpin">UnPin</string>
    <string name="unpinned_message_title">Unpinned message</string>
    <string name="unpinned_message_confirmation">Are you sure to unpin message:%s: %s?</string>
    <string name="unpinned_message_content">Are you sure to unpin message:\n{name}:{content}?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="unnoticed_title">Unnoticed</string>
    <string name="unnoticed_message">Do you want to toggle unnoticed status?</string>
    <string name="user_removed_from_unnoticed">User removed from unnoticed list.</string>
    <string name="user_added_to_unnoticed">User added to unnoticed list.</string>
    <string name="failed_to_remove_user">Failed to remove user: %1$s</string>
    <string name="failed_to_add_user">Failed to add user: %1$s</string>
    <string name="failed_to_check_unnoticed">Failed to check unnoticed users: %1$s</string>
    <string name="invalid_user_data">Invalid user data.</string>
    <string name="Download">Downloading...</string>
    <string name="writeCmt">Write a comment...</string>
    <string name="comments">Comments</string>
    <string name="name_in_main_chat">Username</string>
    <string name="image_holder">Placeholder Image</string>

</resources>