<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"


    >
    <LinearLayout

        android:padding="20dp"
        android:background="@drawable/background_dialog_delete"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">
    <TextView
        android:id="@+id/dialog_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/DeleteMessage"
        android:textSize="18sp"
        android:textStyle="bold"
        android:textColor="@color/black"
        android:paddingBottom="10dp"/>

    <TextView
        android:id="@+id/dialog_message"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/AreYouSureYouWantToDeleteThisMessage"
        android:textColor="@color/xam"
        android:paddingBottom="20dp"/>



    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="end">

        <Button

            android:id="@+id/dialog_cancel"
            android:background="@drawable/none"
            android:textColor="#2196F3"

            android:layout_width="55dp"
            android:layout_height="wrap_content"
            android:text="@string/CancelDelete"/>

        <Button
            android:background="@drawable/none"
            android:textColor="#2196F3"
            android:id="@+id/dialog_delete"
            android:layout_width="60dp"
            android:layout_height="wrap_content"
            android:text="@string/Delete"
            android:layout_marginStart="10dp"/>
    </LinearLayout>
    </LinearLayout>
</LinearLayout>
