<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:id="@+id/main"
    android:layout_height="match_parent"
    tools:context=".activities.InforChat">
  <RelativeLayout
      android:layout_width="match_parent"
      android:layout_height="wrap_content">

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

      <ImageView
          android:id="@+id/imageView7"
          android:layout_width="wrap_content"
          android:layout_height="55dp"
          android:layout_gravity="center_horizontal"
          android:scaleX="2"
          app:srcCompat="@drawable/top2" />

      <ImageView
          android:id="@+id/imageView4"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:layout_gravity="center_horizontal"
          android:scaleX="1.2"
          app:srcCompat="@drawable/top" />

    </FrameLayout>

    <TextView
        android:id="@+id/txtName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/imgView"
        android:layout_centerInParent="true"
        android:layout_marginTop="25dp"
        android:text=""
        android:textAlignment="center"
        android:textSize="40sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.imageview.ShapeableImageView
        android:id="@+id/imgView"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_alignParentTop="true"
        android:layout_centerInParent="true"
        android:layout_marginTop="85dp"
        android:scaleType="centerCrop"
        android:src="@drawable/ic_launcher_background"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtName"
        app:shapeAppearanceOverlay="@style/circular" />

    <FrameLayout
        android:id="@+id/navBar"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_below="@id/txtName"
        android:layout_marginTop="25dp">

      <LinearLayout
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:gravity="center"
          android:layout_centerInParent="true"
          android:orientation="horizontal">

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/btnCall"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:backgroundTint="#D9D9D9"
            android:scaleType="fitCenter"
            android:tint="@color/black"
            app:elevation="0dp"
            app:srcCompat="@drawable/call" />

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/btnVideo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:backgroundTint="#D9D9D9"
            android:scaleType="fitCenter"
            android:tint="@color/black"
            app:srcCompat="@drawable/videocall"
            app:elevation="0dp" />

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/btnInfor"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:backgroundTint="#D9D9D9"
            android:scaleType="fitCenter"
            android:tint="@color/black"
            app:srcCompat="@drawable/account"
            app:elevation="0dp" />

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/btnNotice"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:backgroundTint="#D9D9D9"
            android:scaleType="fitCenter"
            android:tint="@color/black"
            app:srcCompat="@drawable/notifications"
            app:elevation="0dp" />
      </LinearLayout>
    </FrameLayout>

    <LinearLayout
        android:padding="10dp"
        android:id="@+id/anotherOption"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/navBar"
        android:layout_alignParentStart="true"
        android:layout_centerInParent="true"
        android:layout_marginTop="40dp"
        android:orientation="vertical">

      <TextView
          android:id="@+id/txtView1"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:text="@string/AnotherOption"
          android:textSize="25dp"
          android:textStyle="bold" />

      <FrameLayout
          android:id="@+id/frmNotice"
          android:layout_width="match_parent"
          android:layout_height="40dp"
          android:layout_marginTop="25dp">

        <ImageView
            android:id="@+id/imgNotice"
            android:layout_width="50dp"
            android:layout_height="match_parent"
            android:layout_marginLeft="10dp"
            android:scaleType="fitCenter"
            app:srcCompat="@drawable/notifications" />

        <TextView
            android:id="@+id/txtNotice"
            android:layout_width="280dp"
            android:layout_height="match_parent"
            android:layout_marginLeft="80dp"
            android:gravity="center_vertical"
            android:text="@string/Noticeoption"
            android:textSize="25dp" />
      </FrameLayout>

      <FrameLayout
          android:id="@+id/frmLink"
          android:layout_width="match_parent"
          android:layout_height="40dp"
          android:layout_marginTop="20dp">

        <ImageView
            android:id="@+id/imgeLink"
            android:layout_width="50dp"
            android:layout_height="match_parent"
            android:layout_marginLeft="10dp"
            android:scaleType="fitCenter"
            app:srcCompat="@drawable/link" />

        <TextView
            android:id="@+id/txtLink"
            android:layout_width="280dp"
            android:layout_height="match_parent"
            android:layout_marginLeft="80dp"
            android:gravity="center_vertical"
            android:text="@string/Viewpinnedmessage"
            android:textSize="25dp" />
      </FrameLayout>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/support"
        android:padding="10dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/anotherOption"
        android:layout_alignParentStart="true"
        android:layout_centerInParent="true"
        android:layout_marginTop="30dp"
        android:orientation="vertical">

      <TextView
          android:id="@+id/txtSupport"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:text="@string/PrivicySupport"
          android:textSize="25dp"
          android:textStyle="bold" />

      <FrameLayout
          android:id="@+id/frmBlock"
          android:layout_width="match_parent"
          android:layout_height="40dp"
          android:layout_marginTop="20dp">

        <ImageView
            android:id="@+id/imgBlock"
            android:layout_width="50dp"
            android:layout_height="match_parent"
            android:layout_marginLeft="10dp"
            android:scaleType="fitCenter"
            app:srcCompat="@drawable/block" />

        <TextView
            android:id="@+id/txtBlock"
            android:layout_width="280dp"
            android:layout_height="match_parent"
            android:layout_marginLeft="80dp"
            android:gravity="center_vertical"
            android:text="@string/Block"
            android:textSize="25dp" />
      </FrameLayout>

    </LinearLayout>

    <ImageView
        android:id="@+id/imgBack"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="50dp"
        android:scaleType="fitCenter"
        app:srcCompat="@drawable/arrow_back" />
  </RelativeLayout>
</ScrollView>