<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center"
    android:orientation="vertical"
    tools:context=".Login">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="490dp"
        android:layout_weight="1"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/textView"
            android:layout_width="400dp"
            android:layout_height="156dp"
            android:layout_weight="1"
            android:paddingStart="30dp"
            android:paddingTop="40dp"
            android:text="@string/WELCOMEBACK"
            android:textSize="34sp" />

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:paddingStart="20dp">

            <ImageView
                android:id="@+id/imageView2"
                android:layout_width="match_parent"
                android:layout_height="119dp"
                android:paddingEnd="-50dp"
                app:srcCompat="@drawable/decoration2" />

            <ImageView
                android:id="@+id/imageView3"
                android:layout_width="match_parent"
                android:layout_height="157dp"
                android:paddingTop="30dp"
                android:paddingEnd="-50dp"
                app:srcCompat="@drawable/decoration1" />
        </FrameLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="480dp"
        android:layout_gravity="center"
        android:layout_weight="1"
        android:orientation="vertical"
        android:paddingStart="40dp"
        android:paddingEnd="40dp">

        <TextView
            android:id="@+id/textView2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:paddingBottom="16dp"
            android:text="@string/Login"
            android:textColor="#000000"
            android:textSize="48sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/textView3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/Pleasesignintocontinue"
            android:textSize="24sp" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:orientation="vertical"
        android:paddingTop="20dp">

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="70dp">

            <ImageView
                android:id="@+id/imageView5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                app:srcCompat="@drawable/background_email_input" />

            <ImageView
                android:id="@+id/imageView6"
                android:layout_width="28dp"
                android:layout_height="26dp"
                android:layout_gravity="center"
                android:layout_marginRight="120dp"
                app:srcCompat="@drawable/email" />

            <TextView
                android:id="@+id/textView5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginRight="72dp"
                android:layout_marginBottom="18dp"
                android:gravity="center"
                android:text="EMAIL" />

            <EditText
                android:id="@+id/etEmail"
                android:layout_width="210dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginStart="10dp"
                android:ems="10"
                android:hint="Email"
                android:inputType="textEmailAddress"
                android:textColor="#767676"
                android:textSize="12sp" />



        </FrameLayout>

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="70dp">

            <ImageView
                android:id="@+id/imageView5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                app:srcCompat="@drawable/background_email_input" />

            <ImageView
                android:id="@+id/imageView6"
                android:layout_width="28dp"
                android:layout_height="26dp"
                android:layout_gravity="center"
                android:layout_marginRight="120dp"
                app:srcCompat="@drawable/password" />

            <EditText
                android:id="@+id/etPassword"
                android:layout_width="206dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginStart="10dp"
                android:ems="10"
                android:hint="Password"
                android:inputType="textPassword"
                android:textColor="#737373"
                android:textSize="12sp"
                android:textStyle="normal" />

        </FrameLayout>

        <Button
            android:id="@+id/btnForgotPassword"
            android:layout_width="186dp"
            android:layout_height="17dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="10dp"
            android:background="@drawable/forgotpass" />

        <Button
            android:id="@+id/btnLogin"
            android:layout_width="142dp"
            android:layout_height="57dp"
            android:layout_gravity="end"
            android:layout_marginTop="30dp"
            android:layout_marginEnd="30dp"
            android:background="@drawable/loginbutton" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginVertical="5dp">

            <TextView
                android:id="@+id/textView14"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Or Sign Up Using"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="5dp"
                android:gravity="center"
                android:orientation="horizontal"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView14">

                <Button
                    android:id="@+id/btnGoogleSignIn"
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:layout_marginRight="10dp"
                    android:background="@drawable/google_logo" />

                <Button
                    android:id="@+id/btnFacebookSignIn"
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:layout_gravity="center"
                    android:layout_marginLeft="10dp"
                    android:background="@drawable/facebook_logo" />

            </LinearLayout>

        </androidx.constraintlayout.widget.ConstraintLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textView7"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_weight="1"
                android:text="@string/Donthaveanaccount"
                android:textAlignment="viewEnd" />

            <Button
                android:id="@+id/btnSignUp"
                android:layout_width="10dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginEnd="60dp"
                android:layout_weight="1"
                android:background="#00FFFFFF"
                android:paddingLeft="5dp"
                android:text="@string/Signup"
                android:textAlignment="textStart"
                android:textColor="#F89324" />

        </LinearLayout>
    </LinearLayout>

</LinearLayout>