<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"

    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.CreateGroup">

    <ImageView
        android:id="@+id/imageView9"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:scaleType="fitXY"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/top" />

    <RelativeLayout
        android:id="@+id/relativeLayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingHorizontal="30dp"
        android:paddingVertical="5dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView6"
        >


        <androidx.cardview.widget.CardView
            android:id="@+id/userImageCard"
            android:layout_width="80dp"
            android:layout_height="80dp"
            app:cardCornerRadius="@android:dimen/app_icon_size"
            app:cardElevation="0dp">

            <ImageView
                android:scaleType="centerCrop"
                android:id="@+id/groupImage"
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:background="@drawable/avatar_placeholder_allchat" />

        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:id="@+id/addImgCard"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignEnd="@id/userImageCard"
            android:layout_alignBottom="@id/userImageCard"
            app:cardCornerRadius="@android:dimen/app_icon_size"
            app:cardElevation="5dp"

            >

            <ImageButton
                android:id="@+id/addImg"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:background="@color/white"
                android:scaleType="fitXY"
                android:src="@drawable/baseline_add_24" />
        </androidx.cardview.widget.CardView>

        <EditText
            android:id="@+id/groupName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignTop="@+id/userImageCard"
            android:layout_alignBottom="@+id/userImageCard"
            android:layout_marginStart="25dp"
            android:layout_marginTop="16dp"
            android:layout_marginBottom="16dp"
            android:layout_toEndOf="@+id/userImageCard"
            android:gravity="center_vertical"
            android:hint="@string/Nameyourgroup"
            android:textColorHint="@color/xam"
            android:textSize="17sp" />

    </RelativeLayout>

    <TextView
        android:id="@+id/textView6"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:text="@string/CreateGroup"
        android:textColor="#fda13a"
        android:textSize="35dp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView9" />

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="30dp"
        android:layout_marginTop="25dp"
        android:padding="5dp"
        android:background="@drawable/custonlinear01_home"
        android:gravity="center_vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/relativeLayout">

        <ImageButton
            android:id="@+id/search_btn"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:background="@android:color/transparent"
            android:src="@drawable/baseline_search_24" />

        <EditText
            android:id="@+id/filter_search"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:layout_weight="1"
            android:background="@null"
            android:hint="Search"
            android:inputType="text"
            android:textSize="15dp"
        />

    </LinearLayout>
<!--    <View
        android:id="@+id/spaceView"
        android:layout_width="match_parent"
        android:layout_height="50dp"

        app:layout_constraintTop_toBottomOf="@+id/linearLayout"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />-->
    <androidx.recyclerview.widget.RecyclerView

        android:padding="10dp"
        android:id="@+id/rvAdded"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout" />


    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rvAdd"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:padding="10dp"
        app:layout_constraintBottom_toTopOf="@+id/guideline"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/rvAdded"
        app:layout_constraintVertical_bias="1.0" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.9124487" />

    <Button
        android:id="@+id/cancelBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="20dp"
        android:background="@drawable/custonlinear01_home"
        android:paddingHorizontal="20dp"
        android:paddingVertical="10dp"
        android:text="@string/Cancel"
        android:textSize="18dp"
        app:layout_constraintEnd_toStartOf="@+id/createBtn"
        app:layout_constraintTop_toTopOf="@+id/createBtn" />

    <Button
        android:id="@+id/createBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="20dp"
        android:background="@drawable/custombtn02_home"
        android:paddingHorizontal="20dp"
        android:paddingVertical="10dp"
        android:text="@string/Create"
        android:textColor="@color/white"
        android:textSize="18dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/guideline" />

</androidx.constraintlayout.widget.ConstraintLayout>